# halyoontok

./: .env.example  .gitignore  AI-ASSISTED.md  CLAUDE.md  MVP-PLAN.md  PATTERNS.md  README.md  deam.txt  docker-compose.yml  halyoontok_project_plan.md
.claude/: skills-link
.cursor/: mcp.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/shared/: pyproject.toml  setup.py
backend/shared/halyoontok/auth/: permissions.py  users.py
backend/shared/halyoontok/background/: celery_app.py
backend/shared/halyoontok/background/tasks/: data_collection.py  generation.py  media_processing.py  moderation.py  publishing.py  trend_detection.py
backend/shared/halyoontok/configs/: app_configs.py  constants.py
backend/shared/halyoontok/db/: models.py  moderation.py  social_channels.py  social_videos.py
backend/shared/halyoontok/db/engine/: sql_engine.py
backend/shared/halyoontok/error_handling/: error_codes.py
backend/shared/halyoontok/file_store/: file_store.py
backend/shared/halyoontok/integrations/: ai_generation.py  base.py  instagram.py  tiktok.py  youtube.py
backend/shared/halyoontok/services/: analytics_service.py  auth_service.py  content_service.py  data_collection_service.py  generation_service.py  interaction_service.py  moderation_service.py  profile_service.py  search_service.py  studio_service.py  user_service.py  virality_service.py
backend/shared/halyoontok/storage/: __init__.py  backend.py  local.py  r2.py
backend/shared/halyoontok/utils/: logger.py  rate_limit.py  sentry.py
frontend/: package.json  pnpm-lock.yaml
(+216 files in other folders)
