[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halyoontok-shared"
version = "0.1.0"
description = "HalyoonTok shared modules (db, auth, config, storage)"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic[email]>=2.10",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "boto3>=1.35",
    "redis>=5.2",
    "Pillow>=10.0",
    "eval_type_backport>=0.2",
]

[tool.setuptools.packages.find]
include = ["halyoontok*"]
